--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/mbr-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/mbr-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -199,7 +199,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">Most Recent Post</h3>
-                <div class="lead"><p>Read my most recent post below or click <strong><em>here</em></strong> to see all of them.</p></div>
+                <div class="lead"><p>Read my most recent post below or click <strong><em><a href="posts.html">here</a></em></strong> to see all of them.</p></div>
                 
             </div>
         </div>
@@ -267,7 +267,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="qbtDi52aRC5pueOQkvKkcalq+KVqNRH82JSYPH1lVTauPehzBxZ4pR4uhYZgwhBFE1YOyooXHMUxlVS3Ue+4vYTbnq4KWcR1uQiaOIIQDmFCXkk4oFhexFFmLUH01kI+" data-form-email="true">
+                        <input type="hidden" value="6bU/pWrG/0ynCRN5P3Hr+cJP/S512fjPkrN2QEMsYzgQZqolFW57qQCtaG2Vr7rp7gW1MNA+flX18qIV2q3z08HhBQnO9NYP67xlxd9gVjLr7/UspUoHHpVWO3GRk2N2" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
