--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-98398385-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+<!-- /Google Analytics -->
+
+
 <section id="menu-1">
 
     <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
@@ -57,7 +72,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/mbr-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-0" style="background-image: url(assets/images/mbr-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -205,7 +220,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="71zFoG9TCDVh/F+PyCcCsoci3h7+WkA70+kQBy2Kg4farsybsJiHc9LbY7Yk0ceGu/5Q6gaC2gYc7BxqTjCJgZDxiq0yLnZikhH2WCV23PBl5Chbl7MLVRyoxYyxICES" data-form-email="true">
+                        <input type="hidden" value="ytEs5kt3HFetIgpJoRv9q198Oj7+moMi9+BioBtlTkkE9W9PVWRohGmUqrduypq0ZJHD+qwP1m+cgsckH1Il0NwMpwRsaUACkgaLqleE15oijUCpmNxIW5I+nVc6koJs" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
